--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,17 @@
-.navbar-lewagon {
+.navbar-ets {
   justify-content: space-between;
-  background: white;
+  background-color: transparent;
+  transition: 0.5s background-color ease;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.navbar-ets-black {
+  background-color: $black;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
-}
+// .navbar-ets .navbar-collapse {
+//   flex-grow: 0;
+// }
+
+// .navbar-ets .navbar-brand img {
+//   width: 40px;
+// }
