--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
