--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,21 @@
+<div class="home-banner">
+</div>
+
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
+<p>texttexttexttexttexttexttext</p>
 <p>texttexttexttexttexttexttext</p>
 <p>texttexttexttexttexttexttext</p>
 <p>texttexttexttexttexttexttext</p>
