--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,33 +1,69 @@
 <div class="home-banner">
 </div>
 
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
-<p>texttexttexttexttexttexttext</p>
+<div class="container card-showreel">
+  <div class="row" style="align-content: center;">
+    <!-- Button trigger modal -->
+    <button id="link" type="button" class="btn btn-primary" data-toggle="modal" data-target="#videoModal" >
+      showreel
+    </button>
+
+
+
+  </div>
+</div>
+
+<!-- Modal -->
+
+<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            </div>
+            <div class="modal-body">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/-XOFx7WV4xQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModal" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <div>
+          <iframe width="100%" height="550" src="https://youtu.be/-XOFx7WV4xQ" target="_parent"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+ -->
+
+
+
+<!-- <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <iframe src="https://youtu.be/-XOFx7WV4xQ"></iframe>
+
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+ -->
