--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,7 +6,7 @@
 
   .navbar-brand {
     display: inline-block;
-    padding-top: 21px;
+    // padding-top: 21px;
     padding-bottom: 0.3125rem;
     margin-left: 30px;
     font-size: 1.25rem;
@@ -23,7 +23,7 @@
 
 .link-pages {
   margin-right: 8px;
-  padding-top: 21px;
+  // padding-top: 21px;
   text-decoration: none;
   font-variant-caps: all-small-caps;
   font-size: larger;
@@ -39,3 +39,4 @@
     transition: 0.1s;
   }
 }
+
