--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,69 +1,45 @@
 <div class="home-banner">
 </div>
 
-<div class="container card-showreel">
-  <div class="row" style="align-content: center;">
-    <!-- Button trigger modal -->
-    <button id="link" type="button" class="btn btn-primary" data-toggle="modal" data-target="#videoModal" >
-      showreel
-    </button>
+<div class="container card-showreel col-sm-12 col-md-12 col-xl-12">
+    <div class="row" style="align-content: center;">
+  <div class="col-sm12 col-md-12 col-xl-12">
+<!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+        showreel
+      </button>
 
-
-
+    </div>
   </div>
 </div>
+
 
 <!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+ <div class="modal-dialog modal-dialog-centered" role="document" style="justify-content: center;">
 
-<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <div class="modal-content">
+
+         <div class="modal-body">
+            <div class="embed-responsive embed-responsive-16by9" >
+
+              <div itemscope itemtype="https://schema.org/VideoObject">
+                <meta itemprop="uploadDate" content="Sat Apr 11 2020 23:24:05 GMT+0100 (Western European Summer Time)"/>
+                <meta itemprop="name" content="Show-reel"/>
+                <meta itemprop="duration" content="PT3M34.8S" />
+                <meta itemprop="thumbnailUrl" content="https://content.jwplatform.com/thumbs/fkToJQWP-1280.jpg"/>
+                <meta itemprop="contentUrl" content="https://content.jwplatform.com/videos/fkToJQWP-jx0XJsWj.mp4"/>
+
+                  <iframe src="https://cdn.jwplayer.com/players/fkToJQWP-UGU20sBR.html" width="100%" height="100%" frameborder="0" scrolling="auto" title="Show-reel" style="position:absolute;" allowfullscreen></iframe>
+
+              </div>
+
             </div>
-            <div class="modal-body">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/-XOFx7WV4xQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="true"></iframe>
-            </div>
-        </div>
-    </div>
+
+         </div>
+
+      </div>
+
+ </div>
 </div>
 
-
-<!-- <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModal" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <div>
-          <iframe width="100%" height="550" src="https://youtu.be/-XOFx7WV4xQ" target="_parent"></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
- -->
-
-
-
-<!-- <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-
-        <iframe src="https://youtu.be/-XOFx7WV4xQ"></iframe>
-
-      </div>
-
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
- -->
