--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-ets fixed-top">
   <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag "menu-bar.svg" %>
+    <%= image_tag "/menu-bar.svg", id: "menu-bar" %>
   <% end %>
 
   <div class="link-pages">
