--- a/app/assets/stylesheets/components/_home-banner.scss
+++ b/app/assets/stylesheets/components/_home-banner.scss
@@ -1,6 +1,9 @@
 .home-banner {
-  background-image: url('home-banner.svg');
-  background-size: cover;
-  height: 100vh;
+  img {
+    // background-image: url('home-banner.svg');
+    background-size: cover;
+    // height: 100vh;
+    width: 100%;
+  }
 }
 
