--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,45 +1,54 @@
-<div class="home-banner">
-</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 p-0">
+      <div class="home-banner">
+        <%= image_tag "home-banner.svg", alt: "alttext" %>
+      </div>
 
-<div class="container card-showreel col-sm-12 col-md-12 col-xl-12">
-    <div class="row" style="align-content: center;">
-  <div class="col-sm12 col-md-12 col-xl-12">
-<!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-        showreel
-      </button>
+      <div class="container card-showreel col-sm-12 col-md-12 col-lg-12 col-xl-12">
+        <div class="row" style="align-content: center;">
+          <!-- <div class="col-sm12 col-md-12 col-lg-12 col-xl-12"> -->
+      <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+              showreel
+            </button>
+
+          <!-- </div> -->
+        </div>
+      </div>
+
+
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+       <div class="modal-dialog modal-dialog-centered" role="document" style="justify-content: center;">
+
+            <div class="modal-content">
+
+               <div class="modal-body">
+                  <div class="embed-responsive embed-responsive-16by9" >
+
+                    <div itemscope itemtype="https://schema.org/VideoObject">
+                      <meta itemprop="uploadDate" content="Sat Apr 11 2020 23:24:05 GMT+0100 (Western European Summer Time)"/>
+                      <meta itemprop="name" content="Show-reel"/>
+                      <meta itemprop="duration" content="PT3M34.8S" />
+                      <meta itemprop="thumbnailUrl" content="https://content.jwplatform.com/thumbs/fkToJQWP-1280.jpg"/>
+                      <meta itemprop="contentUrl" content="https://content.jwplatform.com/videos/fkToJQWP-jx0XJsWj.mp4"/>
+
+                        <iframe src="https://cdn.jwplayer.com/players/fkToJQWP-UGU20sBR.html" width="100%" height="100%" frameborder="0" scrolling="auto" title="Show-reel" style="position:absolute;" allowfullscreen></iframe>
+
+                    </div>
+
+                  </div>
+
+               </div>
+
+            </div>
+
+       </div>
+      </div>
 
     </div>
   </div>
 </div>
 
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
- <div class="modal-dialog modal-dialog-centered" role="document" style="justify-content: center;">
-
-      <div class="modal-content">
-
-         <div class="modal-body">
-            <div class="embed-responsive embed-responsive-16by9" >
-
-              <div itemscope itemtype="https://schema.org/VideoObject">
-                <meta itemprop="uploadDate" content="Sat Apr 11 2020 23:24:05 GMT+0100 (Western European Summer Time)"/>
-                <meta itemprop="name" content="Show-reel"/>
-                <meta itemprop="duration" content="PT3M34.8S" />
-                <meta itemprop="thumbnailUrl" content="https://content.jwplatform.com/thumbs/fkToJQWP-1280.jpg"/>
-                <meta itemprop="contentUrl" content="https://content.jwplatform.com/videos/fkToJQWP-jx0XJsWj.mp4"/>
-
-                  <iframe src="https://cdn.jwplayer.com/players/fkToJQWP-UGU20sBR.html" width="100%" height="100%" frameborder="0" scrolling="auto" title="Show-reel" style="position:absolute;" allowfullscreen></iframe>
-
-              </div>
-
-            </div>
-
-         </div>
-
-      </div>
-
- </div>
-</div>
 
