moved home banner to public

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 p-0">
       <div class="home-banner">
-        <%= image_tag "home-banner.svg", alt: "alttext" %>
+        <%= image_tag "/home-banner.svg", alt: "alttext" %>
       </div>
 
       <div class="container card-showreel col-sm-12 col-md-12 col-lg-12 col-xl-12">
