--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -20,4 +20,11 @@
   background: $gray;
 }
 
+.modal-header {
+  height: 21px;
+  background: $gray;
+  border: none;
+  padding: 18px;
+  align-items: center;
+}
 
