--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container-lg">
+<div class="container-fluid">
   <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 p-0">
       <div class="container col-sm-12 col-md-12 col-lg-12 col-xl-12 p-0">
