--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,17 +5,80 @@
         <%= image_tag "/home-banner.svg", alt: "Home Banner", class: "home-banner" %>
       </div>
 
-      <div class="container card-showreel col-sm-12 col-md-12 col-lg-12 col-xl-12">
-        <div class="row" style="align-content: center;">
-          <!-- <div class="col-sm12 col-md-12 col-lg-12 col-xl-12"> -->
-      <!-- Button trigger modal -->
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+      <div class="container card-showreel col-sm-12 col-md-12 col-lg-12 col-xl-12" style="align-content: center;">
+        <!-- <div class="row" > -->
+
+          <button type="button" class="btn-showreel btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
             showreel
           </button>
 
-          <!-- </div> -->
           <%= render 'shared/modal' %>
+        <!-- </div> -->
+      </div>
+
+
+
+      <div class="container card-carousel carousel slide" id="carouselExampleIndicators" data-ride="carousel" style="height: 100vh;">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <!-- <img class="d-block w-100" src="..." alt="First slide"> -->
+            <!-- <iframe class="d-block w-100" width="640" height="564" src="https://player.vimeo.com/video/130704314" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
+          </div>
+          <div class="carousel-item">
+            <!-- <img class="d-block w-100" src="..." alt="Second slide"> -->
+            <!-- <iframe class="d-block w-100" width="560" height="315" src="https://www.youtube.com/embed/2t2UkQnVgaU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          </div>
+          <div class="carousel-item">
+            <!-- <img class="d-block w-100" src="..." alt="Third slide"> -->
+            <!-- <iframe class="d-block w-100" width="560" height="315" src="https://www.youtube.com/embed/I1LWbQcnJdg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          </div>
+          <div class="carousel-item">
+            <!-- <img class="d-block w-100" src="..." alt="Fourth slide"> -->
+            <!-- <iframe class="d-block w-100" width="560" height="315" src="https://www.youtube.com/embed/vsTXjM7mTJ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          </div>
+          <div class="carousel-item">
+            <!-- <img class="d-block w-100" src="..." alt="Fifth slide"> -->
+            <!-- <iframe class="d-block w-100" width="640" height="564" src="https://player.vimeo.com/video/264526226" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
+          </div>
+          <div class="carousel-item">
+            <!-- <img class="d-block w-100" src="..." alt="Sexth slide"> -->
+            <!-- <iframe class="d-block w-100" width="640" height="564" src="https://player.vimeo.com/video/267407779" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
+          </div>
+          <div class="carousel-item">
+            <!-- <img class="d-block w-100" src="..." alt="Seventh slide"> -->
+            <!-- <iframe class="d-block w-100" width="560" height="315" src="https://www.youtube.com/embed/rtqDhfp-Om0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          </div>
+          <div class="carousel-item">
+            <!-- <img class="d-block w-100" src="..." alt="Eigth slide"> -->
+            <!-- <iframe class="d-block w-100" width="560" height="315" src="https://www.youtube.com/embed/hmru_LNs7Es" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          </div>
+          <div class="carousel-item">
+            <!-- <img class="d-block w-100" src="..." alt="Nineth slide"> -->
+            <!-- <iframe class="d-block w-100" width="560" height="315" src="https://www.youtube.com/embed/qQstxnmhraQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          </div>
+          <!-- <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Tenth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Eleventh slide">
+          </div> -->
         </div>
+
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+
       </div>
 
 
