Created the page but still working on

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,14 +6,14 @@
       </div>
 
       <div class="container card-showreel col-sm-12 col-md-12 col-lg-12 col-xl-12" style="align-content: center;">
-        <!-- <div class="row" > -->
+        <div class="row" style="align-content: center;">
 
           <button type="button" class="btn-showreel btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
             showreel
           </button>
 
           <%= render 'shared/modal' %>
-        <!-- </div> -->
+        </div>
       </div>
 
 
