--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,9 @@
 <div class="container">
   <div class="row justify-content-center p-4 mt-4">
-    <h1>Pages Bio</h1>
+    <%= simple_form_for do |t| %>
+      <%= f.input :name %>
+    <% end %>
+
   </div>
 </div>
+
