--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="row justify-content-center p-4 mt-4">
-    <%= simple_form_for do |t| %>
+    <%= form_for do |f| %>
       <%= f.input :name %>
+      <%= f.input :address %>
+      <%= f.input :rating %>
+      <%= f.submit %>
     <% end %>
 
   </div>
