Closing function working

--- a/app/views/shared/_menu-bar.html.erb
+++ b/app/views/shared/_menu-bar.html.erb
@@ -1,4 +1,4 @@
-<div id="mySidebar" class="sidebar">
+<div id="mySidebar" class="sidebar mt-6">
   <%= link_to "Home", root_path, class: "dropdown-item" %>
   <%= link_to "Profile", edit_user_registration_path, class: "dropdown-item" %>
 
