--- a/app/assets/stylesheets/components/_menu-bar.scss
+++ b/app/assets/stylesheets/components/_menu-bar.scss
@@ -6,10 +6,11 @@
   z-index: 1; /* Stay on top */
   bottom: 0;
   left: -20px;
-  background-color: #111; /* Black*/
+  background-color: #111111de;
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 40px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+  padding-top: 50px; /* Place content 60px from the top */
+  // transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+  -webkit-transition: all 0.5s ease-in-out;
 }
 
 /* The sidebar links */
@@ -17,7 +18,7 @@
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 20px;
-  color: #818181;
+  color: #efefef;
   display: block;
   transition: 0.3s;
 }
@@ -26,6 +27,8 @@
 .sidebar a:hover {
   // color: rgb(43,43,43);
   background-color: $purple;
+  color: white;
+  transition: 0.1s;
 }
 
 
@@ -36,13 +39,18 @@
 }
 
 .toggle-menu-bar {
-  width: 190px;
+  width: 160px;
+  // transition: 0.1s;
+  -webkit-transition: all 0.5s ease-in-out;
 }
 
 #mySidebar {
-  font-family: sans-serif;
+  font-family: 'Work Sans', sans-serif;
   color: rgb(43,43,43);
-  font-weight: bold;
+  font-weight: 400;
+  line-height: 1.5;
+  // transition: 0.1s;
+  -webkit-transition: all 0.5s ease-in-out;
 
 }
 
