Added card over banner - need fix height banner

--- a/app/assets/stylesheets/components/_home-banner.scss
+++ b/app/assets/stylesheets/components/_home-banner.scss
@@ -7,7 +7,7 @@
   img {
     // background-image: url('home-banner.svg');
     // height: 100%;
-    object-fit: fill;
+    object-fit: none;
   }
 }
 
