--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
     <!-- <% else %> -->
       <!-- <%= link_to "Login", user_session_path, class: "link-font", style: "margin-right: 40px;" %> -->
     <!-- <% end %> -->
-
+    <%= link_to "Services", services_path, class: "link-font", style: "margin-right: 30px;"  %>
     <%= link_to "Bio / Studio", bio_path, class: "link-font", style: "margin-right: 30px;" %>
     <%= link_to "Keep in touch", contact_path, class: "link-font" %>
   </div>
