--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,11 +1,15 @@
+.card-banner {
+  display: grid | inline-grid;
+}
+
 .card-showreel {
   background: $black;
   display: flex;
   justify-content: space-around;
   background-size: cover;
-  border: 3px solid #FFFFFF;
+  border: 1px solid #FFFFFF;
   box-sizing: border-box;
-  border-radius: 8px;
+  // border-radius: 8px;
   width: 100%;
   height: 100vh;
 }
@@ -14,10 +18,64 @@
   width: 100%;
   position: absolute;
   background: #272727;
-  border: 3px solid #FFFFFF;
+  border: 1px solid #FFFFFF;
   box-sizing: border-box;
   left: 0px;
   top: 1446px;
 }
 
+#polina {
+  font-family: Agenda-Light, Agenda Light, Agenda, Arial Narrow, sans-serif;
+  font-weight:100;
+  background: rgba(0,0,0,0.3);
+  color: white;
+  padding: 1rem;
+  width: 100%;
+  margin: 2rem;
+  float: right;
+  font-size: 1.2rem;
+  margin-top: 70px;
+}
 
+h1 {
+  font-size: 3rem;
+  text-transform: uppercase;
+  margin-top: 0;
+  letter-spacing: .3rem;
+}
+#polina button {
+  display: block;
+  width: 80%;
+  padding: .4rem;
+  border: none;
+  margin: 1rem auto;
+  font-size: 1.3rem;
+  background: rgba(255,255,255,0.23);
+  color: #fff;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: .3s background;
+}
+#polina button:hover {
+   background: rgba(0,0,0,0.5);
+}
+
+// a {
+//   display: inline-block;
+//   color: #fff;
+//   text-decoration: none;
+//   background:rgba(0,0,0,0.5);
+//   padding: .5rem;
+//   transition: .6s background;
+// }
+// a:hover{
+//   background:rgba(0,0,0,0.9);
+// }
+
+@media screen and (max-width: 500px) {
+  div{width:70%;}
+}
+@media screen and (max-device-width: 800px) {
+  html { background: url(https://thenewcode.com/assets/images/polina.jpg) #000 no-repeat center center fixed; }
+  #bgvid { display: none; }
+}
