--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,31 +1,39 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row"style="text-align: -webkit-center;margin-top: 40px;">
+    <div class="col-sm-12 col-md-12 col-lg-12" >
+      <p id="notice"><%= notice %></p>
 
-<h1>Services</h1>
+      <h1>Services</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Media</th>
-      <th>Period</th>
-      <th>Service</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <table>
+        <thead>
+          <tr>
+            <th>Media</th>
+            <th>Period</th>
+            <th>Service</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-  <tbody>
-    <% @services.each do |service| %>
-      <tr>
-        <td><%= service.media %></td>
-        <td><%= service.period %></td>
-        <td><%= service.service %></td>
-        <td><%= link_to 'Show', service %></td>
-        <td><%= link_to 'Edit', edit_service_path(service) %></td>
-        <td><%= link_to 'Destroy', service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <tbody>
+          <% @services.each do |service| %>
+            <tr>
+              <td><%= service.media %></td>
+              <td><%= service.period %></td>
+              <td><%= service.service %></td>
+              <td><%= link_to 'Show', service %></td>
+              <td><%= link_to 'Edit', edit_service_path(service) %></td>
+              <td><%= link_to 'Destroy', service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
 
-<br>
+      <br>
 
-<%= link_to 'New Service', new_service_path %>
+      <%= link_to 'New Service', new_service_path %>
+
+    </div>
+  </div>
+</div>
+
