Return active support for rails 5 dependancy

--- a/app/assets/stylesheets/components/_home-banner.scss
+++ b/app/assets/stylesheets/components/_home-banner.scss
@@ -1,6 +1,6 @@
 .home-banner {
   // min-height: 100vh;
-  background-size: cover;
+  // background-size: cover;
   // min-width: 100%;
   width: 100%;
 
