--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row"style="text-align: -webkit-center;margin-top: 40px;">
+  <div class="row justify-content-center p-4 mt-4">
     <div class="col-sm-12 col-md-12 col-lg-12" >
       <p id="notice"><%= notice %></p>
 
